Several enhancements, routes adjustments and components created
- Creates Avatar and Modal components
- Updates Profile to be a Modal over Home page
- Updates routing to work better with the changes above
- Enhancements on contexts and hooks

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .styled-box {
+    @apply border-2 rounded-lg shadow-md p-5;
+  }
+}
